hello-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 4
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - image: bob2606/hello-http:0.8.34
          name: hello-http
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /livez
              port: 80
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: status
              mountPath: /var/lib/hello-http/

      volumes:
        - name: status
          emptyDir:
