nginx-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        env: dev
    spec:
      containers:
      - image: nginx:1.28
        name: nginx
        readinessProbe:
          httpGet:
            path: /index.html
            port: 80
          periodSeconds: 3
          failureThreshold: 3
      - image: php:8.2-fpm
        name: php
