www-deploy-stage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: www
  name: www
  namespace: stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: www
    spec:
      containers:
      - image: nginx:1.28
        name: nginx
