hello-svc-headless.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hello
  type: ClusterIP
  clusterIP: None
